--- a/Lezione04/quotes/app/views/quotes/index.html.erb
+++ b/Lezione04/quotes/app/views/quotes/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Quotes#index</h1>
-<p>Find me in app/views/quotes/index.html.erb</p>
+
+
+<pre>
+<a href="#">#<%= @quote.id %></a>
+<%= @quote.text %>  
+</pre>
