Esercizio per lezione pronto

--- a/Lezione04/quotes/public/stylesheets/application.css
+++ b/Lezione04/quotes/public/stylesheets/application.css
@@ -19,10 +19,16 @@ h1 {
 	font-weight: bold;
 	background-color: #c08000;
 	margin-bottom: 0;
+	padding: 2px;
 }
 
 p#navigation {
 	margin-top: 0;
 	text-align: right;
   background-color: #f0f0f0;
+}
+
+footer {
+	text-align: right;
+	font-style: italic;
 }
