--- a/Lezione04/quotes/app/views/layouts/application.html.erb
+++ b/Lezione04/quotes/app/views/layouts/application.html.erb
@@ -7,10 +7,16 @@
 </head>
 <body>
   <div id="page">
-    <h1>Quotes database</h1>
-    <p id="navigation">Home / Latest / Random / 0-99 / 100-199 / 200-299 </p>
-    
+    <h1>Quotes Database</h1>
+    <p id="navigation">Home / Latest / Random / 0-49 / 50-99 / 100-149 / 150-199 </p>
+        
     <%= yield %>    
+    
+    <footer>
+      <p>
+        <%= @quotes_count %> quotes!
+      </p>
+    </footer>
   </div>
 </body>
 </html>
