--- a/Lezione04/quotes/app/views/layouts/application.html.erb
+++ b/Lezione04/quotes/app/views/layouts/application.html.erb
@@ -8,15 +8,10 @@
 <body>
   <div id="page">
     <h1>Quotes Database</h1>
-    <p id="navigation">Home / Latest / Random / 0-49 / 50-99 / 100-149 / 150-199 </p>
+    <p id="navigation">Home / 10 Random / 0-49 / 50-99 / 100-149 / 150-199 </p>
         
     <%= yield %>    
     
-    <footer>
-      <p>
-        <%= @quotes_count %> quotes!
-      </p>
-    </footer>
   </div>
 </body>
 </html>
