--- a/Lezione05/twitter/app/views/layouts/application.html.erb
+++ b/Lezione05/twitter/app/views/layouts/application.html.erb
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Twitter</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+  <title>Prova</title>
+  <style type="text/css" media="screen">
+    body { background-color: #fff; color: #333; }
+
+    body, p, ol, ul, td {
+      font-family: verdana, arial, helvetica, sans-serif;
+      font-size:   13px;
+      line-height: 18px;
+    }
+
+    pre {
+      background-color: #eee;
+      padding: 10px;
+      font-size: 11px;
+    }
+
+    a { color: #000; }
+    a:visited { color: #666; }
+    a:hover { color: #fff; background-color:#000; }    
+
+    label > span {
+      display: inline-block;
+      width: 5em;
+    }    
+  </style>
 </head>
 <body>
+  <h1><a href="/">Twitter (?)</a></h1>
 
 <%= yield %>
 
