Converted user to use ActiveRecord

--- a/Lezione06/twitter/app/views/users/new.html.erb
+++ b/Lezione06/twitter/app/views/users/new.html.erb
@@ -15,13 +15,13 @@
   <p>
     <label>
       <span>Username</span>
-      <input type="text" name="username" value="<%= @user.username %>" />
+      <input type="text" name="user[username]" value="<%= @user.username %>" />
     </label>
   </p>
   <p>
     <label>
       <span>Email</span>
-      <input type="text" name="email" value="<%= @user.email %>" />
+      <input type="text" name="user[email]" value="<%= @user.email %>" />
     </label>
   </p>
   <p>
