--- a/Lezione06/twitter/app/views/layouts/application.html.erb
+++ b/Lezione06/twitter/app/views/layouts/application.html.erb
@@ -25,10 +25,25 @@
       display: inline-block;
       width: 5em;
     }    
+    
+    .flash {
+      font-style: italic;
+      background: pink;
+    }
+    
+    .tweets .author {
+      color: darkgray;
+      font-size: smaller;
+    }
+    
+    #new_tweet {
+      float: left;
+      padding-right: 3em;
+    }
   </style>
 </head>
 <body>
-  <h1><a href="/">Twitter (?)</a></h1>
+  <h1><a href="/">Twitter!</a></h1>
 
 <%= yield %>
 
