--- a/Lezione06/twitter/app/views/users/edit.html.erb
+++ b/Lezione06/twitter/app/views/users/edit.html.erb
@@ -2,18 +2,7 @@
 
 <form action="/users/update" method="post">
   <input type="hidden" name="id" value="<%= @user.id %>"/>
-  <p>
-    <label>
-      <span>Username</span>
-      <input type="text" name="user[username]" value="<%= @user.username %>" />
-    </label>
-  </p>
-  <p>
-    <label>
-      <span>Email</span>
-      <input type="text" name="user[email]" value="<%= @user.email %>" />
-    </label>
-  </p>
+  <%= render "form" %>
   <p>
     <input type="submit" value="Modifica" />
   </p>  
