--- a/Lezione06-solved/twitter/app/views/layouts/application.html.erb
+++ b/Lezione06-solved/twitter/app/views/layouts/application.html.erb
@@ -1,51 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Prova</title>
-  <style type="text/css" media="screen">
-    body { background-color: #fff; color: #333; }
+  <head>
+    <title>Prova</title>
+    <link rel="stylesheet" href="/css/master.css" type="text/css" media="screen" />
+  </head>
+  <body>
+    <div id="page">
+      <h1><a href="/">Tuitter</a></h1>
 
-    body, p, ol, ul, td {
-      font-family: verdana, arial, helvetica, sans-serif;
-      font-size:   13px;
-      line-height: 18px;
-    }
+      <% if flash[:notice] %>
+      <p class="flash"><%= flash[:notice] %></p>
+      <% end  %>
 
-    pre {
-      background-color: #eee;
-      padding: 10px;
-      font-size: 11px;
-    }
-
-    a { color: #000; }
-    a:visited { color: #666; }
-    a:hover { color: #fff; background-color:#000; }    
-
-    label > span {
-      display: inline-block;
-      width: 5em;
-    }    
-    
-    .flash {
-      font-style: italic;
-      background: pink;
-    }
-    
-    .tweets .author {
-      color: darkgray;
-      font-size: smaller;
-    }
-    
-    #new_tweet {
-      float: left;
-      padding-right: 3em;
-    }
-  </style>
-</head>
-<body>
-  <h1><a href="/">Twitter!</a></h1>
-
-<%= yield %>
-
-</body>
+      <%= yield %>
+    </div>
+  </body>
 </html>
