--- a/Lezione06-solved/twitter/app/views/tweets/index.html.erb
+++ b/Lezione06-solved/twitter/app/views/tweets/index.html.erb
@@ -3,6 +3,16 @@
     <textarea name="tweet[text]"></textarea>
   </p>
   <p>
+    <label>
+      Sono l'utente 
+      <select name="tweet[user_id]">
+        <% for user in @users %>
+          <option value="<%= user.id %>"><%= user %></option>
+        <% end %>
+      </select>
+    </label>
+  </p>
+  <p>
     <input type="submit" value="Update your status" />
   </p>
 </form>
@@ -10,8 +20,7 @@
 <ul class="tweets">
   <% for tweet in @tweets %>
   <li>
-    <%= tweet.text %>
+    <%= render :partial => "tweet", :locals => {:tweet => tweet} %>
   </li>
   <% end %>
 </ul>
-
