Update main route
Minor graphic improvement

--- a/Lezione06-solved/twitter/app/views/layouts/application.html.erb
+++ b/Lezione06-solved/twitter/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Prova</title>
+    <title>Tuitter</title>
     <link rel="stylesheet" href="/css/master.css" type="text/css" media="screen" />
   </head>
   <body>
