--- a/Lezione06-solved/twitter/app/views/tweets/index.html.erb
+++ b/Lezione06-solved/twitter/app/views/tweets/index.html.erb
@@ -15,6 +15,9 @@
   <p>
     <input type="submit" value="Update your status" />
   </p>
+  <p>
+    <%= link_to "Iscriviti!", "/users/new" %>
+  </p>
 </form>
 
 <ul class="tweets">
