--- a/Lezione07/twitter/app/views/tweets/index.html.erb
+++ b/Lezione07/twitter/app/views/tweets/index.html.erb
@@ -1,3 +1,11 @@
+<p id="logged_in_user">
+  <% if current_user %>
+      Logged in as <%= current_user %> (<%= link_to "logout", "/sessions/destroy" %>)
+  <% else %>
+    <%= link_to "Please sign in", "/sessions/new" %>
+  <% end %>
+</p>
+
 <form id="new_tweet" action="/tweets/create" method="post">
   <p>
     <textarea name="tweet[text]"></textarea>
@@ -14,9 +22,6 @@
   </p>
   <p>
     <input type="submit" value="Update your status" />
-  </p>
-  <p>
-    <%= link_to "Iscriviti!", "/users/new" %>
   </p>
 </form>
 
