Ora prendiamo lo user id dall'utente corrente

--- a/Lezione07/twitter/app/views/tweets/index.html.erb
+++ b/Lezione07/twitter/app/views/tweets/index.html.erb
@@ -6,24 +6,17 @@
   <% end %>
 </p>
 
-<form id="new_tweet" action="/tweets/create" method="post">
-  <p>
-    <textarea name="tweet[text]"></textarea>
-  </p>
-  <p>
-    <label>
-      Sono l'utente 
-      <select name="tweet[user_id]">
-        <% for user in @users %>
-          <option value="<%= user.id %>"><%= user %></option>
-        <% end %>
-      </select>
-    </label>
-  </p>
-  <p>
-    <input type="submit" value="Update your status" />
-  </p>
-</form>
+<% if current_user %>
+  <form id="new_tweet" action="/tweets/create" method="post">
+    <input type="hidden" name="tweet[user_id]" value="<%= current_user.id %>" />
+    <p>
+      <textarea name="tweet[text]"></textarea>
+    </p>
+    <p>
+      <input type="submit" value="Update your status" />
+    </p>
+  </form>
+<% end %>
 
 <ul class="tweets">
   <% for tweet in @tweets %>
