--- a/Lezione07/tuitter/app/views/users/_form.html.erb
+++ b/Lezione07/tuitter/app/views/users/_form.html.erb
@@ -20,3 +20,15 @@
     <input type="text" name="user[email]" value="<%= @user.email %>" />
   </label>
 </p>
+<p>
+  <label>
+    <span>Password</span>
+    <input type="password" name="user[password]" value="" />
+  </label>
+</p>
+<p>
+  <label>
+    <span>Confirm</span>
+    <input type="password" name="user[password_confirmation]" value="" />
+  </label>
+</p>
