--- a/Lezione07.risolto/tuitter/app/views/users/show.html.erb
+++ b/Lezione07.risolto/tuitter/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
 <h2>@<%= @user.username %></h2>
 <p><%= @user.email %></p>
 
-<%= link_to "Aggiorna il tuo profilo", :action => "edit", :id => @user.id %>
+<% if current_user == @user %>
+  <%= link_to "Aggiorna il tuo profilo", :action => "edit", :id => @user.id %>
+<% end %>
