--- a/Lezione08/tuitter/app/views/users/show.html.erb
+++ b/Lezione08/tuitter/app/views/users/show.html.erb
@@ -3,18 +3,19 @@
 
 <p>Following <%= @user.people_i_follow.count %></p>
 
-<p>
-<% if current_user.not_following @user %>
-  <form method="post" action="/followings/create/#{@user.id}">
-    <input type="submit" value="Follow <%= @user.username %>" />
-  </form>
-<% elsif current_user.following @user %>
-  <form method="post" action="/followings/destroy/#{@user.id}">
-    <input type="submit" value="Unfollow <%= @user.username %>" />
-  </form>
+<% if current_user %>
+  <p>
+    <% if current_user.not_following @user %>
+      <form method="post" action="/followings/create/<%= @user.id %>">
+        <input type="submit" value="Follow <%= @user.username %>" />
+      </form>
+    <% elsif current_user.following @user %>
+      <form method="post" action="/followings/destroy/<%= @user.id %>">
+        <input type="submit" value="Unfollow <%= @user.username %>" />
+      </form>
+    <% end %>
+  </p>
 <% end %>
-</p>
-
 <% if current_user == @user %>
   <%= link_to "Aggiorna il tuo profilo", :action => "edit", :id => @user.id %>
 <% end %>
