Risolto esercizio a lezione
Abbiamo creato uno helper per semplificare i link agli utenti
Abbiamo aggiunto la lista degli utenti seguiti da un utente
Abbiamo fatto in modo che la home page restituisca solo i tweet che interessano
all'utente

--- a/Lezione08.risolto/tuitter/app/views/shared/_tweets.html.erb
+++ b/Lezione08.risolto/tuitter/app/views/shared/_tweets.html.erb
@@ -3,7 +3,7 @@
   <li>
     <div class="tweet">
       <div class="header">
-        <%= link_to tweet.user, "/users/#{tweet.user.id}" %>
+        <%= link_to_user tweet.user %>
         <span class="when"><%= time_ago_in_words(tweet.created_at) %></span>
       </div>
       <p class="text">
