--- a/Lezione08.risolto/tuitter/app/views/tweets/index.html.erb
+++ b/Lezione08.risolto/tuitter/app/views/tweets/index.html.erb
@@ -1,6 +1,6 @@
 <p>
   <% if current_user %>
-    Benvenuto <%= current_user %> (<%= link_to "logout", "/sessions/destroy" %>)
+    Benvenuto <%= link_to_user current_user %> (<%= link_to "logout", "/sessions/destroy" %>)
   <% else %>
     Please <%= link_to "log in", "/sessions/new" %> or 
     <%= link_to "register", "/users/new" %>
