--- a/Lezione08.risolto/tuitter/app/views/users/show.html.erb
+++ b/Lezione08.risolto/tuitter/app/views/users/show.html.erb
@@ -1,7 +1,8 @@
 <h2>@<%= @user.username %></h2>
 <p><%= @user.email %></p>
 
-<p>Following <%= @user.users_that_i_follow.count %></p>
+<p><%= link_to "Following #{@user.users_that_i_follow.count}", 
+  "/users/followed_by/#{@user.id}", :title => "Lista degli utenti che #{@user} segue" %></p>
 
 <% if current_user %>
   <p>
@@ -17,7 +18,7 @@
   </p>
 <% end %>
 <% if current_user == @user %>
-  <%= link_to "Aggiorna il tuo profilo", :action => "edit", :id => @user.id %>
+  <p><%= link_to "Aggiorna il tuo profilo", :action => "edit", :id => @user.id %></p>
 <% end %>
 
 <%= render :partial => "shared/tweets", :object => @user.tweets %>
